# RAG

./: .env.example  .gitignore  Assignment2.md  Assignment3.md  README.md  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
output/: results.txt
rag/: __init__.py  cli.py  config.py  evaluation.py  guardrails.py  pipeline.py  prompt_defense.py
rag/services/: documents.py  qa.py  secure_qa.py  vectorstore.py
